# oliveyoung-hit-prediction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_features.ipynb  03_modeling.ipynb  04_text_analysis.ipynb  05_modeling_lgbm.ipynb  06_error_analysis.ipynb  07_validation.py  08_window_experiment.py  08b_interaction_experiment.py  test.ipynb
reports/: insights_summary.md  validation_results.md
src/crawler/: product.py  ranking.py  review.py
src/db/: schema.py
src/features/: build_features.py
tests/: test_build_features.py
