[project]
name = "oliveyoung-hit-prediction"
version = "0.1.0"
description = "올리브영 신상품 히트 예측 — 출시 후 첫 2주 데이터로 3개월 후 카테고리 베스트셀러 여부 예측"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.0",
    "playwright>=1.45",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "pyarrow>=24.0.0",
    "shap>=0.51.0",
    "bertopic>=0.17.1",
    "kiwipiepy>=0.23.1",
    "sentence-transformers>=5.5.1",
    "six>=1.17.0",
    "plotly>=6.7.0",
    "kaleido>=1.3.0",
    "lightgbm>=4.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
